<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="56dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <EditText
        android:hint="Email"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/hwid_signin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/edt_email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:hint="Password"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/edt_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/edt_pass"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:hint="Code"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/edt_pass"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/edt_code"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_margin="8dp"
        android:id="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@id/edt_code"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/ButtonStyle"
        android:text="@string/hwid_pass" />

    <Button
        android:layout_margin="8dp"
        android:visibility="gone"
        android:id="@+id/btn_register"
        app:layout_constraintTop_toBottomOf="@id/edt_code"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/ButtonStyle"
        android:text="@string/hwid_register" />

    <Button
        android:layout_margin="8dp"
        android:id="@+id/hwid_code"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/ButtonStyle"
        android:text="@string/hwid_code" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/hwid_code"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/hwid_repass"
        android:text="@string/hwid_repass" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/hwid_code"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/info_login"
        android:text="@string/info_login" />

</LinearLayout>
