<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginFragment">

    <TextView
        android:id="@+id/header_login"
        android:layout_margin="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/hwid_login_header"
        style="@style/TitleStyle"
        />

    <com.huawei.hms.support.hwid.ui.HuaweiIdAuthButton
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/header_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/hwid_signin"
        style="@style/ButtonStyle"
        />

    <EditText
        android:hint="Email"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/hwid_signin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/edt_email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:hint="Password"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/edt_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/edt_pass"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:hint="Code"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/edt_pass"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/edt_code"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_margin="8dp"
        android:id="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@id/edt_code"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/ButtonStyle"
        android:text="@string/hwid_pass" />

    <Button
        android:layout_margin="8dp"
        android:id="@+id/hwid_code"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/ButtonStyle"
        android:text="@string/hwid_code" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/hwid_code"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/hwid_repass"
        android:text="@string/hwid_repass" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/hwid_repass"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/info_login"
        android:text="@string/info_login" />


</androidx.constraintlayout.widget.ConstraintLayout>